<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:clickable="false" >

    <TextView
        android:id="@+TaskViewIds/taskTitleComView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="18dp"
        android:layout_marginTop="24dp"
        android:text="@string/formTaskTitle" />

    <TextView
        android:id="@+TaskViewIds/taskTitleInputView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_alignTop="@+TaskViewIds/taskTitleComView"
        android:ems="10" />

    <TextView
        android:id="@+TaskViewIds/taskDescCompView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+TaskViewIds/taskTitleComView"
        android:layout_below="@+TaskViewIds/taskTitleInputView"
        android:layout_marginTop="26dp"
        android:text="@string/formTaskDesc" />

    <TextView
        android:id="@+TaskViewIds/taskDescInputView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_alignTop="@+TaskViewIds/taskDescCompView"
        android:ems="10"/>

    <TextView
        android:id="@+TaskViewIds/timeTxtView"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+TaskViewIds/taskDescInputView"
        android:padding="@dimen/timedate_text_padding"
        android:text="@string/time_text"
        android:textSize="@dimen/timedate_font_size" />
    
    <ImageButton
        android:id="@+TaskViewIds/editButtonView"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_alignParentBottom="true"
        android:layout_below="@+TaskViewIds/timeTxtView"
        android:contentDescription="@string/image_description"
        android:onClick="createTask"
        android:src="@drawable/editbutton" />

</RelativeLayout>